--- a/paquescolar-web/src/main/webapp/app/proveedor/regPreciosReferencia.xhtml
+++ b/paquescolar-web/src/main/webapp/app/proveedor/regPreciosReferencia.xhtml
@@ -35,7 +35,7 @@
                                  style="width: 100%; border:0px none; background-color:transparent;"
                                  styleClass="form-group ui-panelgrid-blank">
                         <p:outputLabel value="Precios de Referencia"/>
-                        <p:outputLabel value="Precios de Máximos"/>
+                        <p:outputLabel value="Precios Máximos"/>
 
                         <p:dataTable id="tblDetallePrecio" widgetVar="tblDetallePrecio" value="#{preciosReferenciaMB.lstPreciosReferencia}" var="precio" 
                                      editMode="cell" rowIndexVar="idRow" rowKey="#{precio.idPrecioRefEmp}" 
