--- a/boleta-web/src/main/webapp/app/index.xhtml
+++ b/boleta-web/src/main/webapp/app/index.xhtml
@@ -36,6 +36,7 @@
                     <p:selectOneMenu value="#{enviarCorreoMB.anho}">
                         <f:selectItem itemLabel="2019" itemValue="2019"/>
                         <f:selectItem itemLabel="2020" itemValue="2020"/>
+                        <f:selectItem itemLabel="2021" itemValue="2021"/>
                     </p:selectOneMenu>
                 </p:outputPanel>
                 <f:facet name="footer">
