--- a/paquescolar-web/src/main/webapp/app/reg07Liquidacion.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07Liquidacion.xhtml
@@ -8,9 +8,9 @@
     <ui:define name="content">
         <p:menubar id="menuBar" styleClass="divSticky"> 
             <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo" />
-            <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar" />
-            <p:menuitem value="Guardar" icon="fa fa-save" ajax="true"/>
-            <p:menuitem value="Imprimir" icon="fa fa-print" ajax="false" />
+            <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar" disabled="true"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" ajax="true" disabled="true"/>
+            <p:menuitem value="Imprimir" icon="fa fa-print" ajax="false" disabled="true"/>
             <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
             <f:facet  name="options" class="centradoVertical">  
@@ -28,122 +28,116 @@
                         <p:outputLabel value="Filtro"/>
                     </h1>
 
+                    <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" 
+                                 style="width: 100%; border:0px none; background-color:transparent;"
+                                 styleClass="form-group ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />
+                        <p:selectOneMenu id="cboRubro" value="#{liquidacionMB.idRubro}">
+                            <f:selectItem itemLabel="Seleccione un rubro" itemValue="null" />
+                            <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
+                            <p:ajax update=":frmPrincipal:pnlFiltro"/>
+                        </p:selectOneMenu>
+
+                        <p:outputLabel value="#{bundle['ce.codEnt']}:" for="txtCodigoEntidad" />
+                        <p:outputPanel id="codigoEntidad" >
+                            <p:inputText id="txtCodigoEntidad" maxlength="5" value="#{liquidacionMB.codigoEntidad}" size="6" autocomplete="off" 
+                                         requiredMessage="Código de infraestructura" onkeyup="return this.value.length >= 5">
+                                <p:ajax event="keyup" update="menuBar nombreCE cboProveedor" listener="#{liquidacionMB.buscarEntidadEducativa}"/>
+                            </p:inputText>
+                            <p:spacer width="10"/>
+                            <p:outputLabel id="nombreCE" value="#{liquidacionMB.entidadEducativa.nombre}" style="font-weight: bold"/>
+                        </p:outputPanel>
+
+                        <p:outputLabel value="Proveedor:" />
+                        <p:selectOneMenu id="cboProveedor" value="#{liquidacionMB.idParticipante}"  onkeydown="setaFoco(this);" >
+                            <f:selectItem itemLabel="Seleccione un proveedor" itemValue="" />  
+                            <f:selectItems value="#{liquidacionMB.oferta.participantesList}" var="par" itemValue="#{par.idParticipante}" itemLabel="#{par.idEmpresa.razonSocial}"/>
+                        </p:selectOneMenu>
+
+                        <p:spacer width="10"/>
+                        <p:commandButton value="Agregar" action="#{liquidacionMB.agregarContrato()}" update="detalleLiquidacion" onsuccess="PF('dlgLiquidacion').show();"/>
+                    </p:panelGrid>
                 </div>
 
                 <div class="card clearfix">
                     <h1>
                         <i class="fa fa-list-ol blue" style="font-size: 16px;"></i>
                         <p:spacer width="10" height="8"/>
-                        <p:outputLabel value="Listado de Contratos"/>
+                        <p:outputLabel value="Liquidaciones realizadas"/>
                     </h1>
-                    <p:outputPanel id="pnlDatos" >
-                        <p:dataTable value="#{modificatoriaController.lstDetalleModificativas}" var="detalle" editable="true" editMode="cell" id="tblDetalleItems"
-                                     rowKey="#{detalle.idDetalleModif}" widgetVar="tblDetalleItems" rowIndexVar="rowId"
-                                     rowStyleClass="#{detalle.estadoEliminacion eq 1 ? 'filaEliminada' : null}" emptyMessage="No hay registros">
 
-                            <p:ajax event="cellEdit" listener="#{modificatoriaController.onCellEdit}" onsuccess="updateDetalleOferta();"/>
-
-                            <f:facet name="header" >  
-                                <p:commandButton value="Agregar" icon="fa fa-plus-circle" action="#{modificatoriaController.agregarItem}" 
-                                                 update="tblDetalleItems" disabled="#{modificatoriaController.deshabilitarAgregar}"/>
-                            </f:facet>
-
-                            <p:columnGroup type="header">
-                                <p:row>
-                                    <p:column rowspan="2" headerText="No Item" width="25" />
-                                    <p:column rowspan="2" headerText="Descripcion" width="220"/>
-                                    <p:column colspan="3" headerText="Valores Actuales" />
-                                    <p:column colspan="3" headerText="Valores Nuevo" />
-                                    <p:column rowspan="2" headerText="Borrar"/>
-                                </p:row>
-                                <p:row>
-                                    <p:column headerText="Cantidad" width="40" />
-                                    <p:column headerText="Precio Uni." width="40"/>
-                                    <p:column headerText="Total" width="55"/>
-                                    <p:column headerText="Cantidad" width="40"/>
-                                    <p:column headerText="Precio Uni." width="40"/>
-                                    <p:column headerText="Total" width="55"/>
-                                </p:row>
-                            </p:columnGroup>
-                            <p:column id="item">
-                                <p:cellEditor>  
-                                    <f:facet name="output">
-                                        <h:outputText value="#{detalle.noItem}" />
-                                    </f:facet>
-                                    <f:facet name="input">
-                                        <p:inputText value="#{detalle.noItem}" size="10" />
-                                    </f:facet>
-                                </p:cellEditor>
-                            </p:column>
-                            <p:column headerText="Descripción">
-                                <p:outputLabel value="#{detalle.consolidadoEspTec}"  id="descripcionItem"/>
-                            </p:column>
-                            <p:column headerText="Cantidad" styleClass="numero">
-                                <h:outputText value="#{detalle.cantidadOld}"/>
-
-                                <f:facet name="footer">  
-                                    <h:outputText value="#{modificatoriaController.cantidadOld}" style="font-weight: bold;" id="cantidadOld"/>
-                                </f:facet>
-                            </p:column>
-                            <p:column headerText="Precio Uni." styleClass="numero">
-                                <h:outputText value="#{detalle.precioUnitarioOld}">
-                                    <f:convertNumber pattern="#,##0.00"  />
-                                </h:outputText>
-                            </p:column>
-                            <p:column headerText="subTotal" styleClass="numero">
-                                <h:outputText value="#{detalle.cantidadOld*detalle.precioUnitarioOld}" >
-                                    <f:convertNumber pattern="#,##0.00"  />
-                                </h:outputText>
-
-                                <f:facet name="footer">  
-                                    <h:outputText value="$ #{modificatoriaController.montoOld}" style="font-weight: bold;" id="montoOld"/>
-                                </f:facet>
-                            </p:column>
-
-                            <!-- NUEVAS CANTIDADES -->
-                            <p:column styleClass="numero">
-                                <p:cellEditor>  
-                                    <f:facet name="output">
-                                        <h:outputText value="#{detalle.cantidadNew}" >
-                                            <f:convertNumber pattern="#,##0"  />
-                                        </h:outputText>
-                                    </f:facet>
-                                    <f:facet name="input">
-                                        <p:inputNumber minValue="0" maxValue="2000" decimalPlaces="0" value="#{detalle.cantidadNew}" disabled="#{detalle.estadoEliminacion eq 1 || modificatoriaController.deshabilitarCantidad}" inputStyle="text-align: right;"/>
-                                    </f:facet>
-                                </p:cellEditor>
-
-                                <f:facet name="footer">  
-                                    <h:outputText value="#{modificatoriaController.cantidadNew}" style="font-weight: bold;" id="cantidadNew"/>
-                                </f:facet>
-                            </p:column>
-                            <p:column styleClass="numero">
-                                <h:outputText value="#{detalle.precioUnitarioNew}" id="precioUnitario" >
-                                    <f:convertNumber pattern="#,##0.00"  />
-                                </h:outputText>
-                            </p:column>
-                            <p:column styleClass="numero">
-                                <h:outputText value="#{detalle.cantidadNew*detalle.precioUnitarioNew}" id="subTotal" >
-                                    <f:convertNumber pattern="#,##0.00"  />
-                                </h:outputText>
-
-                                <f:facet name="footer">  
-                                    <h:outputText value="$ #{modificatoriaController.montoNew}" style="font-weight: bold;" id="montoNew"/>
-                                </f:facet>
-                            </p:column>
-
-                            <p:column headerText="Borrar" width="7" style="text-align: center;">
-                                <p:commandLink  action="#{modificatoriaController.eliminarDetalle}" update="tblDetalleItems" disabled="#{modificatoriaController.deshabilitarEliminar}">
-                                    <p:outputLabel rendered="#{!detalle.eliminar}" id="ok"> <i class="fa fa-check-circle"></i></p:outputLabel>
-                                    <p:outputLabel rendered="#{detalle.eliminar}" id="remover"> <i class="fa fa-minus-circle"></i></p:outputLabel>
-                                    <f:setPropertyActionListener value="#{detalle}" target="#{modificatoriaController.detalleSeleccionado}"/>  
-                                    <f:setPropertyActionListener value="#{rowId}" target="#{modificatoriaController.rowEdit}"/>  
-                                </p:commandLink>
-                            </p:column>
-                        </p:dataTable>
-                    </p:outputPanel>
+                    <p:dataTable id="tblLiquidaciones" value="#{liquidacionMB.lstLiquidaciones}" var="liq" rowIndexVar="rodId">
+                        <p:column headerText="#" width="50">
+                            <h:outputText value="#{rowId + 1}"/>
+                        </p:column>
+                        <p:column headerText="Fecha de Contrato">
+                            <h:outputText value="#{liq.idContrato.fechaEmision}">
+                                <f:convertDateTime pattern="dd/MM/yyyy"/>
+                            </h:outputText>
+                        </p:column>
+                        <p:column headerText="Acta Recepcion">
+                            <p:selectBooleanCheckbox value="#{liq.recepcion}"/>
+                        </p:column>
+                        <p:column headerText="Estado liquidación">
+                            <h:outputText value="#{liq.estadoLiquidacion eq 1 ? ('SIN REGISTRO'):(liq.estadoLiquidacion eq 2 ? 'EN PROCESO':'LIQUIDACIÓN')}"/>
+                        </p:column>
+                        <p:column headerText="Comentario">
+                            <h:outputText value="#{liq.comentario}"/>
+                        </p:column>
+                        <p:column headerText="Imprimir" width="110">
+                            <p:commandButton icon="fa fa-print" />
+                        </p:column>
+                    </p:dataTable>
                 </div>
             </div>
         </div>
+
+        <p:dialog id="dlgLiquidacion" widgetVar="dlgLiquidacion" header="Información del Contrato" width="500">
+            <p:outputPanel id="detalleLiquidacion" styleClass="ui-fluid">
+                <p:panelGrid columns="2" style="width: 100%; border:0px none; background-color:transparent;"
+                             styleClass="form-group ui-panelgrid-blank">
+                    <p:outputLabel for="txtFecha" value="Fecha contrato" />
+                    <p:outputLabel for="txtMontoOriginal" value="Monto contrato" />
+
+                    <p:inputText id="txtFecha" value="#{liquidacionMB.contrato.fechaEmision}" readonly="true">
+                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                    </p:inputText>
+                    <p:inputText id="txtMontoOriginal" value="#{liquidacionMB.montoOriginal}" />
+
+                    <p:outputLabel for="txtNumCon" value="Número contrato" />
+                    <p:spacer width="10"/>
+                    <p:inputText id="txtNumCon" value="#{liquidacionMB.numeroContrato}" />
+                </p:panelGrid>
+                
+                <p:panelGrid columns="1" style="width: 100%; border:0px none; background-color:transparent;"
+                             styleClass="form-group ui-panelgrid-blank">
+                    <p:selectBooleanCheckbox value="#{liquidacionMB.modificativa}" itemLabel="¿Tiene modificativa?" style="width: 100%;" disabled="true"/>
+                </p:panelGrid>
+
+                <p:panelGrid columns="2" style="width: 100%; border:0px none; background-color:transparent;"
+                             styleClass="form-group ui-panelgrid-blank" rendered="#{liquidacionMB.modificativa}">
+                    <p:outputLabel for="txtFechaModif" value="Fecha Modificativa" />
+                    <p:outputLabel for="txtMontoModif" value="Monto contrato" />
+
+                    <p:inputText id="txtFechaModif" value="#{liquidacionMB.resModificativa.fechaModificacion}" readonly="true">
+                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                    </p:inputText>
+                    <p:inputText id="txtMontoModif" value="#{liquidacionMB.montoModificativa}" readonly="true"/>
+                </p:panelGrid>
+
+
+                <p:panelGrid columns="1" style="width: 100%; border:0px none; background-color:transparent;"
+                             styleClass="form-group ui-panelgrid-blank">
+                    <p:outputLabel for="txtComen" value="Comentario" />
+                    <p:inputTextarea id="txtComen" value="#{liquidacionMB.liquidacion.comentario}" />
+
+                </p:panelGrid>
+            </p:outputPanel>
+
+            <f:facet name="footer">
+                <p:commandButton id="btnGuardar" value="Guardar" action="#{liquidacionMB.agregarLista}" icon="pi pi-check" oncomplete="PF('dlgLiquidacion').hide();" update="tblLiquidaciones"/>
+                <p:commandButton id="btnCancelar" value="Cancelar" styleClass="secondary-button" icon="pi pi-refresh" onclick="PF('dlgLiquidacion').hide();"/>
+            </f:facet>
+        </p:dialog>
     </ui:define>
 </ui:composition>
